--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" output="test_classes" path="test"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Spring/spring-mock-2.0-rc3.jar"/>
-	<classpathentry kind="lib" path="C:/Spring/spring-framework-3.0.0.RC1/dist/org.springframework.core-3.0.0.RC1.jar"/>
-	<classpathentry kind="lib" path="C:/apache/commons-logging-1.1.1/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/atlassian-jira-rpc-plugin-3.9.3-1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.core-3.0.0.RC1.jar"/>
+	<classpathentry kind="lib" path="lib/spring-mock-2.0-rc3.jar"/>
+	<classpathentry kind="lib" path="lib/ws-commons-util-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/xmlrpc-client-3.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/xmlrpc-common-3.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/xmlrpc-server-3.1.2.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
